2001-09-03  Michael Hope  <michaelh@juju.net.nz>

	* link/z80/aslink.h: Fixed path for PATH_MAX

2001-09-02  Michael Hope  <michaelh@juju.net.nz>

	* src/z80/gen.c (fetchLitPair): Changed so that it properly caches direct space references.

	* support/regression/tests/addsub.c: Added cases to cover all the +, - combinations.

	* support/regression/tests/uminus.c: Added a test for the unary minus operator.

	* src/z80/gen.c (genUminus): Fixed add, sub, and uminus on the gbz80 port for longs.  Had to shift some functions about to do it.

2001-09-01  Michael Hope  <michaelh@juju.net.nz>

	* src/z80/gen.c: Fixed up generator to pass the regresion tests, specifically fixing loads for longs, genCmp, and turned on the map file.
	(genCmp): Fixed up genCmp for the GB with longs.

	* device/lib/gbz80/Makefile: Fixed up all the libraries to pass the regression tests.

	* support/regression/ports/host/spec.mk: Updated to compile with the new type specifiers.

	* device/lib/Makefile.in (Z80SOURCES): Removed old _mululong, _mulslong, and unneeded _mulint.

	* device/lib/_mullong.c (_mulslong): Changed to actually return a value :)

2001-08-30  Paul Stoffregen  <paul@pjrc.com>

	* added peepholes 223 to 231 to mcs51 port.  These improve code when using large model.

2001-08-30  Michael Hope  <michaelh@juju.net.nz>

	* device/lib/gbz80/crt0.s (init): Fixed up support for the gbz80 such that it will at least run (and fail badly) the regression tests.

	* src/z80/gen.c (genPlus): Changed bad long add for gb to a fall through.

2001-08-29  Michael Hope  <michaelh@juju.net.nz>

	* link/z80/aslink.h: Fixed long file name support.  Is now based off PATH_MAX instead of a constant.

	* src/z80/gen.c: Fixed add and sub for the case where left or right are in static space.

2001-08-30 Bernhard Held   <bernhard@bernhardheld.de>

  * sim/ucsim/configure:    little improvement of Cygwin-detection	
  * sim/ucsim/configure.in: little improvement of Cygwin-detection	